--- a/templates/login.html
+++ b/templates/login.html
@@ -18,9 +18,49 @@
     />
     <link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
 
-    <title>Register Page </title>
+    <title>Login Page </title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        
+          
+        </ul>
+
+        
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'dashboard' %}">Profile <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'ragistration' %}">Register</a>
+          </li>
+          <li class="nav-item">
+
+            <a class="nav-link " href="{% url 'login' %}">Login</a>
+          </li>
+        </ul>
+
+
+        
+
+     
+      </div>
+    </nav>
 
     <section class="vh-100 bg-image"
   style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
@@ -28,50 +68,30 @@
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
+          <div class="card">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form action='{% url 'homepage' %}' method="POST" >
+              <form action='{% url 'login' %}' method="POST" >
                 {% csrf_token %} 
 
-                <div class="form-outline mb-4">
-                  {{ form.username }}
-                </div>
+             <div class="form-outline mb-4">
+                  <input type="text" name='username' id="form3Example1cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example1cg">Your UserName</label>
+              </div>
 
-                <div class="form-outline mb-4">
-                  {{ form.first_name }}
-                </div>
-                <div class="form-outline mb-4">
-                  {{ form.last_name }}
-                </div>
-                <div class="form-outline mb-4">
-                  {{ form.email }}
-                </div>
-                
-                <div class="form-outline mb-4">
-                  {{ form.password }}
-
-                </div>
-                <div class="form-outline mb-4">
-                  {{ form.confrim_password}}
-                </div>
-
-
-                <div class="form-check d-flex justify-content-center mb-5">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-                  <label class="form-check-label" for="form2Example3g">
-                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                  </label>
-                </div>
-
+              <div class="form-outline mb-4">
+                <input type="password" name='password' id="form3Example4cg" class="form-control form-control-lg" />
+                <label class="form-label" for="form3Example4cg">Password</label>
+              </div>
+        
                 <div class="d-flex justify-content-center">
                   <input type="submit" value="Submit">
                   
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                    class="fw-bold text-body"><u>Login here</u></a></p>
+                <p class="text-center text-muted mt-5 mb-0">Dont Have already an account? <a href="#!"
+                    class="fw-bold text-body"><u>SingUp here</u></a></p>
 
               </form>
 
