--- a/templates/base.html
+++ b/templates/base.html
@@ -18,53 +18,16 @@
     />
     <link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
 
-    <title>Login Page </title>
+    <title> {% block title %} {% endblock title %} </title>
   </head>
   <body>
+   <!-- load Header Heare -->
+    {% include 'include_page/navbar.html' %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    {% block main_contant %}
+    <!-- main_contant   -->
+    {% endblock %}  
 
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-        
-          
-        </ul>
-
-        
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'dashboard' %}">Profile <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'ragistration' %}">Register</a>
-          </li>
-          <li class="nav-item">
-
-            <a class="nav-link " href="{% url 'login' %}">Login</a>
-          </li>
-        </ul>
-
-
-        
-
-     
-      </div>
-    </nav>
-
-   
-    <h2> dashboard </h2>
-    
     
     <!-- Optional JavaScript; choose one of the two! -->
 
