--- a/templates/mainapp/login.html
+++ b/templates/mainapp/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} LOgin Pagfe {% endblock title %}
+{% block title %} Login Page {% endblock title %}
 <!-- main_contant   -->
 {% block main_contant %}
 
